tenant/drone-virtual-machine/templates/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: drone-cam
spec:
  selector:
    kubevirt.io/domain: drone-virtual-machine
  ports:
    - name: drone-cam
      protocol: TCP
      port: 8081
      targetPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: drone-tracker
spec:
  selector:
    kubevirt.io/domain: drone-virtual-machine
  ports:
    - name: drone-tracker
      protocol: TCP
      port: 8080
      targetPort: 8080
